[project]
name = "ldp-l2c-unitsync"
description = "LDP L2C Units Synchronizer"
authors = [
    {name = "Pierre Frayer", email = "pierre.frayer@ovhcloud.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "jinja2==3.1.6",
    "pydantic==2.11.3",
    "pyyaml==6.0.2",
    "sentry-sdk==2.32.0"
]
dynamic = [ "version" ]

[project.optional-dependencies]
dev = [ "black==25.1.0", "pylint==3.3.7" ]
tests = [ "pytest==8.4.0 ", "pytest-cov==6.1.1", "pytest-mock==3.14.0" ]

[tool.poetry]
version = "0.0.12"

[[tool.poetry.source]]
name = "ldp-default-pypi"
url = "https://artifactory.ovhcloud.tools/artifactory/api/pypi/ldp-default-pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
command_line = "-m pytest --junitxml=pytest-report.xml"
source = ["src"]
omit = ["*tests*"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.pylint."messages control"]
max-line-length = 100
disable = [
    "logging-not-lazy",
    "logging-fstring-interpolation",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "fixme,duplicate-code"
]

[tool.pylint.report]
output-format = "parseable"