[project]
name = "ldp-l2c-unitsync"
description = "LDP L2C Units Synchronizer"
authors = [
    {name = "Pierre Frayer", email = "pierre.frayer@ovhcloud.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pydantic==2.12.0",
]
dynamic = [ "version" ]

[tool.poetry]
version = "0.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
command_line = "-m pytest --junitxml=pytest-report.xml"
source = ["src"]
omit = ["*tests*"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.pylint."messages control"]
max-line-length = 100
disable = [
    "logging-not-lazy",
    "logging-fstring-interpolation",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "fixme,duplicate-code"
]

[tool.pylint.report]
output-format = "parseable"
